--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
     "gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "core-js": "^3.19.3",
+    "axios": "^0.26.0",
+    "core-js": "^3.21.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-eslint": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
+    "@babel/eslint-parser": "^7.17.0",
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "@vue/cli-plugin-eslint": "^5.0.1",
+    "@vue/cli-service": "^5.0.1",
     "@vue/eslint-config-standard": "^6.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.29.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^7.18.0",
+    "eslint-plugin-vue": "^8.5.0",
     "npm-run-all": "^4.1.5",
     "push-dir": "^0.4.1",
     "vue-template-compiler": "^2.6.14"
