--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "deploy": "run-s build gh-pages",
-    "gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
+    "gh-pages": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^0.26.0",
@@ -29,8 +29,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^8.5.0",
+    "gh-pages": "^3.2.3",
     "npm-run-all": "^4.1.5",
-    "push-dir": "^0.4.1",
     "vue-template-compiler": "^2.6.14"
   }
 }
