--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
     "gh-pages": "gh-pages -d dist"
   },
   "dependencies": {
-    "axios": "^0.26.0",
+    "axios": "^1.2.2",
     "core-js": "^3.21.1",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.3",
+    "vue": "2.7.14",
+    "vue-router": "3.6.5",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.17.0",
-    "@vue/cli-plugin-babel": "^5.0.1",
-    "@vue/cli-plugin-eslint": "^5.0.1",
-    "@vue/cli-service": "^5.0.1",
-    "@vue/eslint-config-standard": "^6.0.0",
-    "eslint": "^8.9.0",
-    "eslint-plugin-import": "^2.25.4",
+    "@babel/eslint-parser": "^7.19.1",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "eslint": "^8.31.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "gh-pages": "^3.2.3",
+    "eslint-plugin-vue": "^9.8.0",
+    "gh-pages": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.7.14"
   }
 }
